Bug fix: page horizontal overflow

--- a/src/layout-default/components/our-partners/our-partners.scss
+++ b/src/layout-default/components/our-partners/our-partners.scss
@@ -7,7 +7,7 @@
 }
 
 .our-partners-logo-box {
-  margin: $space;
+  padding: $space;
 
   text-align: center;
 }
